recent orders section complete

--- a/index.html
+++ b/index.html
@@ -134,6 +134,59 @@
                 </div>
                 <!--------------------END OF INCOME ----------------->
             </div>
+                <!--------------------END OF INSIGTS ------------------>
+                <div class="recent-orders">
+                    <h2>Recent Orders</h2>
+                    <table>
+                        <thread>
+                            <tbody>
+                            <tr>
+                                <th>Product Name</th>
+                                <th>Product Number</th>
+                                <th>Payment</th>
+                                <th>Status</th>
+                            </tr>
+                        </thread>
+        
+                            <tr>
+                                <td>Foldable Mini Drone</td>
+                                <td>85323</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+                            <tr>
+                                <td>Foldable Mini Drone</td>
+                                <td>85323</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+                            <tr>
+                                <td>Foldable Mini Drone</td>
+                                <td>85323</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+                            <tr>
+                                <td>Foldable Mini Drone</td>
+                                <td>85323</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+                            <tr>
+                                <td>Foldable Mini Drone</td>
+                                <td>85323</td>
+                                <td>Due</td>
+                                <td class="warning">Pending</td>
+                                <td class="primary">Details</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <a href="#">Show All</a>
+                </div>
         </main>
     </div>
 </body>
