--- a/index.html
+++ b/index.html
@@ -231,14 +231,55 @@
                             <p><b>Mike Tyson</b> recieved his order of Night lion GPS drone</p>
                             <small class="text-muted">2 Minutes Ago</small>
                         </div>
-                    <div class="update">
-                        <div class="profile-photo">
-                            <img src="./images/profile-2.jpg">
+                    </div>
+                </div>
+            </div>
+            <!-----------------------END OF RECENT UPDATES ----------------->
+            <div class="sales-analytics">
+                <h2>Sales Analytics</h2>
+                <div class="item offline">
+                    <div class="icon">
+                        <span class="material-icons-sharp">local_mall</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>ONLINE ORDERS</h3>
+                            <small class="tex-muted">Last 24 Hours</small>
                         </div>
-                        <div class="message">
-                            <p><b>Mike Tyson</b> recieved his order of Night lion GPS drone</p>
-                            <small class="text-muted">2 Minutes Ago</small>
+                        <h5 class="success">+39%</h5>
+                        <h3>3849</h3>
+                    </div>
+                </div>
+                <div class="item online">
+                    <div class="icon">
+                        <span class="material-icons-sharp">shopping_cart</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>OFFLINE ORDERS</h3>
+                            <small class="tex-muted">Last 24 Hours</small>
                         </div>
+                        <h5 class="danger">-17%</h5>
+                        <h3>1100</h3>
+                    </div>
+                </div>
+                <div class="item online">
+                    <div class="icon">
+                        <span class="material-icons-sharp">person</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>NEW CUSTOMERS</h3>
+                            <small class="tex-muted">Last 24 Hours</small>
+                        </div>
+                        <h5 class="success">+29%</h5>
+                        <h3>849</h3>
+                    </div>
+                </div>
+                <div class="item add-product">
+                    <div>
+                        <span class="material-icons-sharp">add</span>
+                        <h3>Add Product</h3>
                     </div>
                 </div>
             </div>
