done with media queries

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="logo">
                     <img src="./images/logo.png">
                     
-                    <h2 class="text-muted">SEV <span class="danger">DEV</span></h2>
+                    <h2 class="text-muted">LOGO <span class="danger">DEV</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
@@ -219,7 +219,7 @@
                             <img src="./images/profile-2.jpg">
                         </div>
                         <div class="message">
-                            <p><b>Mike Tyson</b> recieved his order of Night lion GPS drone</p>
+                            <p><b>Jon Rawlings</b> recieved his order of Night lion GPS drone</p>
                             <small class="text-muted">2 Minutes Ago</small>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                             <img src="./images/profile-2.jpg">
                         </div>
                         <div class="message">
-                            <p><b>Mike Tyson</b> recieved his order of Night lion GPS drone</p>
+                            <p><b>Jon Rawlings</b> recieved his order of Night lion GPS drone</p>
                             <small class="text-muted">2 Minutes Ago</small>
                         </div>
                     </div>
